# ParkingManagement

./: .dockerignore  .env.dev.example  .env.staging.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile.dev  LICENSE  README.md  TODOLIST.md  coverage.json  gunicorn_config.py  manage.py  pyproject.toml  pytest.ini
.cursor/: mcp.json.example
.cursor/commands/: uv.md
.cursor/rules/: Python3-13.mdc  core.mdc  django.mdc  document.mdc  general.mdc  git.mdc  python.mdc
ParkingManagement/: asgi.py  settings.py  urls.py  wsgi.py
apps/: __init__.py
apps/audit/: __init__.py  admin.py  apps.py  middleware.py
apps/common/: __init__.py  apps.py  decorators.py  exceptions.py  utils.py  validators.py
apps/config/: __init__.py  admin.py  apps.py
apps/infrastructure/: __init__.py  apps.py  middleware.py  signals.py
apps/notifications/: __init__.py  admin.py  apps.py
apps/reports/: __init__.py  apps.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
core/: __init__.py
core/decorators/: __init__.py  decorators.py
core/exceptions/: __init__.py  exceptions.py
core/middleware/: __init__.py  middleware.py
core/utils/: __init__.py  utils.py
docs/: DOCUMENTATION_COMPLETE_REPORT.md  PROJECT_DOCUMENTATION.md  README.md  SECURITY.md  SECURITY_FIX.md
docs/api/: API.md  README.md
docs/architecture/: ARCHITECTURE.md  DATABASE.md  MODULES.md  README.md
docs/bugfixes/: BUGFIX_SUMMARY.md  README.md
docs/contributing/: CONTRIBUTING.md  README.md
docs/deployment/: DEPLOYMENT.md  DEVELOPMENT_DOCKER.md  DOCKER_COMPOSE_GUIDE.md  PRODUCTION_TECH_STACK.md  QUICK_START.md  README.md
docs/development/: DEVELOPMENT.md  QUERY_OPTIMIZATION.md  README.md
docs/features/: README.md
docs/optimization/: ALL_TASKS_COMPLETE.md  CODE_REUSABILITY_ANALYSIS.md  FINAL_OPTIMIZATION_REPORT.md  README.md  TODOLIST_REVIEW.md
docs/refactoring/: CODE_REFACTORING_2025_12_16.md  README.md  RESTRUCTURE_SUMMARY.md
docs/testing/: BUG_FIX_REPORT.md  BUG_SCAN_REPORT.md  COVERAGE_IMPROVEMENT_REPORT.md  FINAL_COVERAGE_REPORT.md  (+2 more)
infra/: __init__.py
nginx/: nginx.conf
parking/: __init__.py  admin.py  apps.py  decorators.py  email_service.py  forms.py  license_plate_models.py  middleware.py  models.py  pricing_models.py  space_creation_service.py  urls.py  user_models.py
scripts/: extract_template_assets.py  start_servers.sh
templates/: 404.html  500.html  base.html  dashboard.html  index.html
(+212 files in other folders)
